--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -28,3 +28,11 @@
 [[constraint]]
   name = "github.com/patrickmn/go-cache"
   version = "2.1.0"
+
+[[constraint]]
+  name = "github.com/gin-gonic/gin"
+  version = "master"
+
+[[constraint]]
+  name = "github.com/ezaurum/session"
+  version = "master"
